--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:local@localhost:5432/postgres
+DATABASE_URL=postgresql://xhowais:rFwxzo5XM7Di@ep-flat-king-a1ptsjo7.ap-southeast-1.aws.neon.tech/auth-db?sslmode=require
