--- a/compose.yml
+++ b/compose.yml
@@ -1,18 +1,19 @@
-version: '3.8'
 services:
   db:
-    image: postgres
-    container_name: nest-drizzle-db
-    restart: always
-    user: postgres
+    image: postgres:latest
     environment:
-      POSTGRES_PASSWORD: local
-    healthcheck:
-      test: ["CMD", "pg_isready"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_DB: fithCorpDB
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
+    restart: always
+  adminer:
+    image: adminer
+    restart: always
     ports:
-      - "5432:5432"
+      - 8080:8080
+
+volumes:
+  db_data:
+    driver: local
